src/test/resources/fail/CommandExpression_02x.groovy
List<Integer list2 = new ArrayList<Integer>()